--- a/templates/userdashb.html
+++ b/templates/userdashb.html
@@ -155,6 +155,7 @@
                 <a href="{% url 'userdashb' %}" class="site-name">AutoCar</a>
             </div>
             <ul>
+                <li><a href="{% url 'history' %}">History</a></li>
                 <li>
                     <a href="{% url 'usercart' %}">
                         🛒 <span style="color: yellow; font-size: 20px;">{{ cart_count|default:"0" }}</span>
