--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -383,7 +383,7 @@
       </div>
 
       <div class="nav-links">
-        <a href="{% url 'history' %}">History</a>
+        <a href="{% url 'usercart' %}">Cart</a>
         <a href="/userlogout/">Logout</a>
       </div>
     </div>
