miniprj done img

--- a/templates/userdashb.html
+++ b/templates/userdashb.html
@@ -64,7 +64,7 @@
 
         /* ⭐ Stylish Marquee */
         .fancy-marquee {
-            background: linear-gradient(to right, #ff4b1f, #1fddff);
+            background: linear-gradient(to right, #e02c47, #016f82);
             padding: 10px 0;
             color: white;
             font-weight: bold;
