--- a/templates/home.html
+++ b/templates/home.html
@@ -282,8 +282,7 @@
         style="width: 600px; height: 600px;" 
         loop autoplay>
         </lottie-player>
-
-        <p>Loading, please wait...</p>
+        <p>Loading .. AutoCar ❤️ ..</p>
     </div>
 
     <!-- NAVBAR -->
